test/failed-1/secret/recursions/ill-typed/divergent-param-and-return-types.stella
// ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
language core;

extend with #fixpoint-combinator;

fn main(n : Bool) -> Bool {
  return fix(
    fn( f : fn(Bool) -> Nat) {
      return fn (a : Bool) {
        return true
      }
    }
  )(n)
}
